pokemon statistic calculator
Pushing mid development as testing CORS error which seems to be related to how the local version of the website is being ran.

--- a/styles/base.css
+++ b/styles/base.css
@@ -30,3 +30,13 @@ input {
     font-family: monospace;
     font-size: 12px;
 }
+
+datalist {
+    font-family: monospace;
+    font-size: 12px;
+}
+
+option {
+    font-family: monospace;
+    font-size: 12px;
+}
