Pokemon stat calc and css change

--- a/styles/base.css
+++ b/styles/base.css
@@ -31,12 +31,17 @@ input {
     font-size: 12px;
 }
 
-datalist {
+select {
     font-family: monospace;
     font-size: 12px;
 }
 
 option {
+    font-family: monospace;
+    font-size: 12px;
+}
+
+datalist {
     font-family: monospace;
     font-size: 12px;
 }
